added a study guide, fixed some bugs, added css

--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -2,7 +2,10 @@
 
 <h1>All Flashcards</h1>
 
+<li><a href="/">Home</a></li>
+<br>
 <a href="/flashcards/add">➕ Add New Flashcard</a>
+
 
 <div class="flashcard-list">
   <% if (flashcards.length === 0) { %>
