--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,8 @@
 <nav>
     <ul>
-      <li><a href="/">Home</a></li>
       <li><a href="/flashcards">Flashcards</a></li>
-      <li><a href="/study">Study</a></li>
-      <li><a href="/add">Add New</a></li>
+      <li><a href="/flashcards/study">Study</a></li>
+      <li><a href="/flashcards/add">Add New</a></li>
     </ul>
   </nav>
   
