--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,12 @@
-<nav>
+<main class="home-container">
+  <h1>📚 Welcome to Flashcard Hero! 📚</h1>
+
+  <nav class="home-nav">
     <ul>
-      <li><a href="/flashcards">Flashcards</a></li>
-      <li><a href="/flashcards/study">Study</a></li>
-      <li><a href="/flashcards/add">Add New</a></li>
+      <li><a href="/flashcards" class="nav-button">View Flashcards</a></li>
+      <li><a href="/flashcards/study" class="nav-button">Start Studying</a></li>
     </ul>
   </nav>
-  
+</main>
+
+<%- include('footer') %>
