--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <main class="home-container">
-  <h1>📚 Welcome to Flashcard Hero! 📚</h1>
+  <h1>📚 Welcome to Flashcard Hero!! 📚</h1>
 
   <nav class="home-nav">
     <ul>
