fixed server side validation

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -349,3 +349,16 @@ h1 .study-exit-button {
   font-weight: bold;
 }
 
+.error-messages {
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  border: 1px solid #f5c6cb;
+}
+.error-messages ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
