--- a/views/flashcards/study.ejs
+++ b/views/flashcards/study.ejs
@@ -12,10 +12,10 @@
     <div class="flashcard-container" data-index="<%= index %>">
       <div class="flashcard-flip" onclick="flipCard(this)">
         <div class="front">
-          <p><%= card.front %></p>
+          <h1><%= card.front %></h1>
         </div>
         <div class="back">
-          <p><%= card.back %></p>
+          <h1><%= card.back %></h1>
         </div>
       </div>
     </div>
